--- a/dot_config/alacritty/alacritty.yaml
+++ b/dot_config/alacritty/alacritty.yaml
@@ -433,10 +433,10 @@
 #   - (macOS) /bin/bash --login
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
-#shell:
-#  program: /bin/bash
-#  args:
-#    - --login
+shell:
+  program: /bin/fish
+  args:
+    - --login
 
 # Startup directory
 #
